manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: front-dep
  ports:
    - protocol: TCP
      port: 2345
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: back-dep
  ports:
    - protocol: TCP
      port: 2222
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    app: db-svc
spec:
  ports:
  - port: 5432
    name: database
  clusterIP: None
  selector:
    app: db-stateful
